# bs

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
include/: loop.h  node.h  reader.h
man/: brainfuck-shell.1  bs.1
src/: Makefile.am  brainfuck.c  loop.c  main.c  node.c  reader.c
